--- a/TrekPack/Info.plist
+++ b/TrekPack/Info.plist
@@ -65,6 +65,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Requires photo library to retrieve photo for trek.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
