--- a/TrekPack/Info.plist
+++ b/TrekPack/Info.plist
@@ -74,5 +74,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Required to determine distance to destination.</string>
 </dict>
 </plist>
