Added feature where the trek distance is saved to the trek struct when the user finalizes the trek.

--- a/TrekPack/Info.plist
+++ b/TrekPack/Info.plist
@@ -75,6 +75,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Required to determine distance to destination.</string>
+	<string>Required to determine user distance to destination.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Required to determine user distance to destination.</string>
 </dict>
 </plist>
