Minor code changes Some bug fixes Minor UI changes

--- a/TrekPack/Info.plist
+++ b/TrekPack/Info.plist
@@ -74,9 +74,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Required to determine distance to destination.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Required to determine user distance to destination.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Required to determine user distance to destination.</string>
+	<string>Required to determine distance to destination.</string>
 </dict>
 </plist>
